Add aclocal -I for libcurl.m4.

--- a/Makefile.am
+++ b/Makefile.am
@@ -27,6 +27,7 @@
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 AM_CPPFLAGS = @LIBCURL_CPPFLAGS@
+ACLOCAL_AMFLAGS = -I .
 
 # The library.
 
