--- a/Makefile.am
+++ b/Makefile.am
@@ -35,9 +35,10 @@ lib_LTLIBRARIES = libykclient.la
 include_HEADERS = ykclient.h
 
 libykclient_la_SOURCES = ykclient.h ykclient.c
-libykclient_la_SOURCES += rfc4634/hmac.c rfc4634/sha1.c rfc4634/usha.c	\
+libykclient_la_SOURCES += rfc4634/sha.h rfc4634/sha-private.h		\
+			rfc4634/hmac.c rfc4634/sha1.c rfc4634/usha.c	\
 			rfc4634/sha224-256.c rfc4634/sha384-512.c
-libykclient_la_SOURCES += b64/cencode.c
+libykclient_la_SOURCES += b64/cencode.h b64/cencode.c
 libykclient_la_LIBADD = @LIBCURL@
 libykclient_la_LDFLAGS = -no-undefined \
 	-export-symbols-regex '^ykclient_.*' \
