Check server response HMAC signature.
Some changes to original patch by
Fredrik Thulin <fredrik@yubico.com>.

Original patch submitted in
http://code.google.com/p/yubico-c-client/issues/detail?id=1

--- a/Makefile.am
+++ b/Makefile.am
@@ -32,9 +32,10 @@ ACLOCAL_AMFLAGS = -I m4
 # The library.
 
 lib_LTLIBRARIES = libykclient.la
-include_HEADERS = ykclient.h
+include_HEADERS = ykclient_server_response.h ykclient.h
 
-libykclient_la_SOURCES = ykclient.h ykclient.c
+libykclient_la_SOURCES = ykclient_server_response.h ykclient_server_response.c	\
+			ykclient.h ykclient.c
 libykclient_la_SOURCES += rfc4634/sha.h rfc4634/sha-private.h		\
 			rfc4634/hmac.c rfc4634/sha1.c rfc4634/usha.c	\
 			rfc4634/sha224-256.c rfc4634/sha384-512.c
@@ -93,6 +94,8 @@ release:
 	cd $(srcdir) && git push
 	cd $(srcdir) && git tag -u $(KEYID)! -m $(VERSION) v$(VERSION)
 	cd $(srcdir) && git push --tags
+	mkdir -p ../releases/$(PACKAGE)/ && \
+		cp -v $(PACKAGE)-$(VERSION).tar.gz* ../releases/$(PACKAGE)/
 	googlecode_upload.py -s "OpenPGP signature for $(PACKAGE) $(VERSION)." \
 	 -p $(PROJECT) -u $(USER) $(PACKAGE)-$(VERSION).tar.gz.sig
 	googlecode_upload.py -s "$(PACKAGE) $(VERSION)" \
