--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,53 @@
-Makefile.in
-configure
-build-aux
-m4
-autom4te.cache
-aclocal.m4
-INSTALL
 *~
 .*~
-\#*
+.deps/
+.libs/
 ChangeLog
+INSTALL
+Makefile
+Makefile.in
+\#*
+aclocal.m4
+autom4te.cache
+build-aux
+cdecode.lo
+cdecode.o
+cencode.lo
+cencode.o
 config.guess
+config.log
+config.status
 config.sub
+configure
 depcomp
+hmac.lo
+hmac.o
 install-sh
+libtool
+libykclient.la
 ltmain.sh
+m4/libtool.m4
+m4/ltoptions.m4
+m4/ltsugar.m4
+m4/ltversion.m4
+m4/lt~obsolete.m4
 missing
+sha1.lo
+sha1.o
+sha224-256.lo
+sha224-256.o
+sha384-512.lo
+sha384-512.o
+tests/.deps/
+tests/Makefile
+tests/selftest
+tests/selftest.o
+tool.o
+usha.lo
+usha.o
+ykclient
+ykclient-*.tar.gz
+ykclient.lo
+ykclient.o
+ykclient_server_response.lo
+ykclient_server_response.o
