--- a/configure.ac
+++ b/configure.ac
@@ -37,7 +37,8 @@ AC_SUBST(LT_CURRENT, 6)
 AC_SUBST(LT_REVISION, 4)
 AC_SUBST(LT_AGE, 3)
 
-AM_INIT_AUTOMAKE([-Wall -Werror])
+AM_INIT_AUTOMAKE([1.10 -Wall -Werror])
+AM_SILENT_RULES([yes])
 AC_PROG_CC
 AC_LIBTOOL_WIN32_DLL
 AC_PROG_LIBTOOL
