--- a/.gitignore
+++ b/.gitignore
@@ -1,53 +1,33 @@
+*.cache
+*.lo
+*.o
 *~
 .*~
 .deps/
 .libs/
+ar-lib
 ChangeLog
 INSTALL
 Makefile
 Makefile.in
 \#*
 aclocal.m4
-autom4te.cache
 build-aux
-cdecode.lo
-cdecode.o
-cencode.lo
-cencode.o
 config.guess
 config.log
 config.status
 config.sub
 configure
 depcomp
-hmac.lo
-hmac.o
 install-sh
 libtool
 libykclient.la
 ltmain.sh
-m4/libtool.m4
-m4/ltoptions.m4
-m4/ltsugar.m4
-m4/ltversion.m4
-m4/lt~obsolete.m4
+m4/*
 missing
-sha1.lo
-sha1.o
-sha224-256.lo
-sha224-256.o
-sha384-512.lo
-sha384-512.o
+test-driver
 tests/.deps/
 tests/Makefile
 tests/selftest
-tests/selftest.o
-tool.o
-usha.lo
-usha.o
 ykclient
 ykclient-*.tar.gz
-ykclient.lo
-ykclient.o
-ykclient_server_response.lo
-ykclient_server_response.o
