Add implementation of versioning interface.

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,20 @@
+!m4/manywarnings.m4
+!m4/warnings.m4
 *.cache
 *.lo
 *.o
+*.swp
 *~
 .*~
 .deps/
 .libs/
-*.swp
-ar-lib
 ChangeLog
 INSTALL
 Makefile
 Makefile.in
 \#*
 aclocal.m4
+ar-lib
 build-aux
 config.guess
 config.log
@@ -25,15 +27,14 @@ libtool
 libykclient.la
 ltmain.sh
 m4/*
-!m4/manywarnings.m4
-!m4/warnings.m4
 missing
 test-driver
 tests/.deps/
 tests/Makefile
 tests/selftest
-tests/test-suite.log
-tests/selftest.trs
 tests/selftest.log
+tests/selftest.trs
+tests/test-suite.log
 ykclient
 ykclient-*.tar.gz
+ykclient_version.h
