enable subdir-objects for latest automake

--- a/configure.ac
+++ b/configure.ac
@@ -37,7 +37,7 @@ AC_SUBST(LT_CURRENT, 8)
 AC_SUBST(LT_REVISION, 0)
 AC_SUBST(LT_AGE, 5)
 
-AM_INIT_AUTOMAKE([1.11 -Wall -Werror])
+AM_INIT_AUTOMAKE([1.11 -Wall -Werror subdir-objects])
 AM_SILENT_RULES([yes])
 AC_PROG_CC
 
