Use build-aux/.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-!m4/manywarnings.m4
-!m4/pkg.m4
-!m4/warnings.m4
 *.cache
 *.lo
 *.o
@@ -15,22 +12,25 @@ Makefile
 Makefile.in
 \#*
 aclocal.m4
-ar-lib
-build-aux
-compile
-config.guess
+build-aux/ar-lib
+build-aux/compile
+build-aux/config.guess
+build-aux/config.sub
+build-aux/depcomp
+build-aux/install-sh
+build-aux/ltmain.sh
+build-aux/missing
+build-aux/test-driver
 config.log
 config.status
-config.sub
 configure
-depcomp
-install-sh
 libtool
 libykclient.la
-ltmain.sh
-m4/*
-missing
-test-driver
+m4/libtool.m4
+m4/ltoptions.m4
+m4/ltsugar.m4
+m4/ltversion.m4
+m4/lt~obsolete.m4
 tests/.deps/
 tests/Makefile
 tests/selftest
