--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,14 @@ compiler:
   - gcc
   - clang
 before_install:
+  - sudo apt-get remove -qq -y $REMOVE
+  - sudo apt-get autoremove -qq
   - sudo apt-get update -qq
-  - sudo apt-get install -qq -y help2man
-script: autoreconf -i && ./configure && make check
+  - sudo apt-get install -qq -y help2man $EXTRA
+matrix:
+  include:
+    - compiler: gcc
+      env: EXTRA="wine mingw-w64" REMOVE=mingw32 ARCH=32 WINDOWS=1
+    - compiler: gcc
+      env: EXTRA="wine mingw-w64" REMOVE=mingw32 ARCH=64 WINDOWS=1
+script: ./build-and-test.sh
