--- a/cmake/ykclientConfig.cmake.in
+++ b/cmake/ykclientConfig.cmake.in
@@ -1,12 +1,8 @@
 get_filename_component(YKCLIENT_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
 include(CMakeFindDependencyMacro)
 
-list(APPEND CMAKE_MODULE_PATH ${YKCLIENT_CMAKE_DIR})
-find_dependency(ykclient @MIN_YKCLIENT_VERSION@)
-list(REMOVE_AT CMAKE_MODULE_PATH -1)
-
-find_dependency(curl @MIN_BOOST_VERSION@)
-find_dependency(zlib @MIN_BOOST_VERSION@)
+find_dependency(CURL)
+find_dependency(ZLIB)
 
 if(NOT TARGET ykclient::ykclient)
     include("${YKCLIENT_CMAKE_DIR}/ykclientTargets.cmake")
